# SRH-Copilot

./: .env.example  .gitignore  README.md  docker-compose.yml  embed.py  pipeline.py  pyproject.toml  requirements.txt  search.py
app/: streamlit_app.py
data/career/: README.md
data/feedback/: README.md
data/hr_compliance/: README.md
data/international/: README.md
data/strategic/: README.md
data/student_services/: README.md
data/teaching/: README.md  core_framework_sample.md
data_categorized/: README.md
docs/: RAG_TUNING.md
notebooks/: 01_rag_pipeline.ipynb  02_document_categorization.ipynb  03_teaching_agent.ipynb
src/copilot/: __init__.py  cli.py
src/copilot/agents/: __init__.py  base.py  cli.py
src/copilot/agents/career/: agent.py  tools.py
src/copilot/agents/feedback/: agent.py  tools.py
src/copilot/agents/hr_compliance/: agent.py  tools.py
src/copilot/agents/international/: agent.py  tools.py
src/copilot/agents/strategic/: agent.py  tools.py
src/copilot/agents/student_services/: agent.py  tools.py
src/copilot/agents/teaching/: agent.py  tools.py
src/copilot/api/: app.py
src/copilot/core/: base_agent.py  config.py  llm.py  registry.py  settings.py  state.py
src/copilot/preprocess/: apply_mapping.py  categorize.py  doc_json.py
src/copilot/rag/: chunking.py  embeddings.py  extractors.py  generate.py  ingest.py  ingest_all.py  inspect.py  retriever.py  store.py
src/copilot/tools/: knowledge.py  web.py
tests/: test_smoke.py
