[project]
name = "university-ai-copilot"
version = "0.1.0"
description = "Modular multi-agent AI platform for higher education (teaching, services, decision support)"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.50",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "pgvector>=0.3.0",
    "anthropic>=0.39.0",
    "voyageai>=0.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "tiktoken>=0.8.0",
    "pypdf>=5.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.7.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
