[project]
name = "university-srh-copilot"
version = "0.3.0"
description = "University SRH Copilot — Teaching Innovation Agent (RAG + agentic, local & open-source)"
requires-python = ">=3.10"
dependencies = [
    # RAG + embeddings
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.45.0",
    "accelerate>=0.34.0",
    "tiktoken>=0.8.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    # document extraction
    "pypdf>=5.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "Pillow>=10.0.0",
    # preprocessing / viz
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    # frontend
    "streamlit>=1.38.0",
]

[project.optional-dependencies]
notebooks = ["jupyter>=1.0", "matplotlib>=3.7", "pandas>=2.0"]
dev = ["pytest>=8.0", "ruff>=0.7.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
